--- a/modules/cog_utils/locale/fr_FR.po
+++ b/modules/cog_utils/locale/fr_FR.po
@@ -58,10 +58,6 @@ msgctxt "field:ir.export_package,instances_to_export:"
 msgid "Instances to export"
 msgstr "Eléments à exporter"
 
-msgctxt "field:ir.export_package,model:"
-msgid "Model"
-msgstr "Modèle"
-
 msgctxt "field:ir.export_package,package_name:"
 msgid "Package Name"
 msgstr "Nom du Groupe"
@@ -81,6 +77,14 @@ msgstr "Mis à jour par"
 msgctxt "field:ir.export_package,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
+
+msgctxt "field:ir.export_package.add_records.start,export_package:"
+msgid "Package"
+msgstr "Formule"
+
+msgctxt "field:ir.export_package.add_records.start,id:"
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:ir.export_package.item,create_date:"
 msgid "Create Date"
@@ -278,6 +282,10 @@ msgctxt "field:ir.test_case.run.select.method,selection:"
 msgid "Selection"
 msgstr "Sélection"
 
+msgctxt "field:ir.ui.icon,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "field:ir.ui.menu,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
@@ -374,6 +382,10 @@ msgctxt "model:ir.action,name:act_test_case_wizard"
 msgid "Test Case Launcher"
 msgstr "Gestionnaire de jeux d'essai"
 
+msgctxt "model:ir.action,name:export_package_wizard"
+msgid "Select Export Package"
+msgstr ""
+
 msgctxt "model:ir.action,name:import_wizard"
 msgid "Import File"
 msgstr "Importer le Fichier"
@@ -381,6 +393,10 @@ msgstr "Importer le Fichier"
 msgctxt "model:ir.export_package,name:"
 msgid "Export Package"
 msgstr "Exports groupés"
+
+msgctxt "model:ir.export_package.add_records.start,name:"
+msgid "Export Package Selector"
+msgstr ""
 
 msgctxt "model:ir.export_package.item,name:"
 msgid "Export Instance"
@@ -458,6 +474,10 @@ msgctxt "selection:ir.test_case.run.select.method,selection:"
 msgid "Not Selected"
 msgstr "Non Sélectionné"
 
+msgctxt "view:ir.export_package.add_records.start:"
+msgid "Select An Export Package"
+msgstr ""
+
 msgctxt "view:ir.export_package.item:"
 msgid "Export Instance"
 msgstr "Elément à exporter"
@@ -501,6 +521,14 @@ msgstr "Version d'Objet"
 msgctxt "view:utils.versionned_object:"
 msgid "Versionned Object"
 msgstr "Objet Versionné"
+
+msgctxt "wizard_button:ir.export_package.add_records,start,add:"
+msgid "Add"
+msgstr "Compléter"
+
+msgctxt "wizard_button:ir.export_package.add_records,start,end:"
+msgid "Cancel"
+msgstr "Annuler"
 
 msgctxt "wizard_button:ir.import,file_selector,end:"
 msgid "Cancel"
