--- a/modules/commission/locale/fr_FR.po
+++ b/modules/commission/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -21,6 +21,10 @@ msgstr "Montant hors Commissions"
 msgctxt "field:account.move,wo_tax_amount:"
 msgid "Total Amount w/o taxes"
 msgstr "Montant total hors Taxes"
+
+msgctxt "field:account.move.breakdown,base_total:"
+msgid "Base Total"
+msgstr "Base"
 
 msgctxt "field:account.move.breakdown,commissions:"
 msgid "Commissions"
