--- a/modules/company_cog/locale/fr_FR.po
+++ b/modules/company_cog/locale/fr_FR.po
@@ -6,6 +6,10 @@ msgctxt "field:company.company,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:company.employee,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "field:ir.test_case,main_company_name:"
-msgid ""
+msgid "Main Company Name"
 msgstr " "
