--- a/modules/contract_insurance_process/locale/fr_FR.po
+++ b/modules/contract_insurance_process/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -62,7 +62,7 @@ msgid "Current Log"
 msgstr "Trace Courante"
 
 msgctxt "field:contract,current_state:"
-msgid ""
+msgid "Current State"
 msgstr " "
 
 msgctxt "field:contract,doc_received:"
