--- a/modules/party_cog/locale/fr_FR.po
+++ b/modules/party_cog/locale/fr_FR.po
@@ -98,6 +98,10 @@ msgctxt "field:party.address,zip_and_city:"
 msgid "Zip"
 msgstr "Code Postal"
 
+msgctxt "field:party.category,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "field:party.contact_mechanism,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
