--- a/modules/table/locale/fr_FR.po
+++ b/modules/table/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -12,7 +12,7 @@ msgstr "Trop peu de valeur de dimension \"%s\" pour \"%s\""
 
 msgctxt "error:table.cell:"
 msgid "Too many dimension values \"%s\" for \"%s\""
-msgstr "Trop de valeur de dimension \"%s\" pour \"%s\"
+msgstr "Trop de valeur de dimension \"%s\" pour \"%s\\"
 
 msgctxt "error:table:"
 msgid "A clone record already exists : %s(%s)"
@@ -20,7 +20,7 @@ msgstr "Une copie existe déjà : %s(%s)"
 
 msgctxt "error:table:"
 msgid "The code of \"Table Definition\" must be unique"
-msgstr ""
+msgstr "Le code de la table doit être unique"
 
 msgctxt "field:table,cells:"
 msgid "Cells"
@@ -221,6 +221,10 @@ msgstr "Nom"
 msgctxt "field:table,number_of_digits:"
 msgid "Number of Digits"
 msgstr "Nombre de Décimales"
+
+msgctxt "field:table,number_of_dimensions:"
+msgid "Number of dimension"
+msgstr "Nombre de dimensions"
 
 msgctxt "field:table,rec_name:"
 msgid "Name"
@@ -526,6 +530,26 @@ msgctxt "field:table.dimension.value,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:table.dimension.value.open.ask_type,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:table.dimension.value.open.ask_type,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre Arbre"
+
+msgctxt "field:table.dimension.value.open.ask_type,table:"
+msgid "Table"
+msgstr "Table"
+
+msgctxt "field:table.dimension.value.open.ask_type,type:"
+msgid "Type"
+msgstr "Type"
+
+msgctxt "model:ir.action,name:"
+msgid "Create Table"
+msgstr "Définition de la Dimension"
+
 msgctxt "model:ir.action,name:act_cell_form"
 msgid "Cells"
 msgstr "Cellules"
@@ -534,13 +558,13 @@ msgctxt "model:ir.action,name:act_cell_relate_form"
 msgid "Cells"
 msgstr "Cellules"
 
-msgctxt "model:ir.action,name:act_create_table"
-msgid "Create Table"
-msgstr "Créer Table"
-
-msgctxt "model:ir.action,name:act_definition_dimension_relate_form"
+msgctxt "model:ir.action,name:act_definition_dimension_form"
 msgid "Definition Dimension"
-msgstr "Définition de la Dimension"
+msgstr "Dimension"
+
+msgctxt "model:ir.action,name:act_dimension_value_open"
+msgid "Definition Dimension"
+msgstr "Dimension"
 
 msgctxt "model:ir.action,name:act_table_2d_open"
 msgid "Table 2D"
@@ -554,7 +578,7 @@ msgctxt "model:ir.action,name:act_table_definition_form"
 msgid "Tables"
 msgstr "Tables"
 
-msgctxt "model:ir.ui.menu,name:menu_create_table"
+msgctxt "model:ir.ui.menu,name:"
 msgid "Create Table"
 msgstr "Créer Table"
 
@@ -581,6 +605,10 @@ msgstr "Cellule"
 msgctxt "model:table.dimension.value,name:"
 msgid "Table Definition Dimension"
 msgstr "Dimension"
+
+msgctxt "model:table.dimension.value.open.ask_type,name:"
+msgid "Table Open Definition Dimension"
+msgstr "Choix de la dimension"
 
 msgctxt "selection:table,dimension_kind10:"
 msgid ""
@@ -958,6 +986,10 @@ msgctxt "view:table.cell:"
 msgid "Table"
 msgstr "Table"
 
+msgctxt "view:table.dimension.value.open.ask_type:"
+msgid "Definition Dimension"
+msgstr "Dimension"
+
 msgctxt "view:table.dimension.value:"
 msgid "Table Definition Dimension"
 msgstr "Dimension"
@@ -968,11 +1000,7 @@ msgstr "Dimensions"
 
 msgctxt "view:table:"
 msgid "Basic Table Definition"
-msgstr ""
-
-msgctxt "view:table:"
-msgid "Manage dimension"
-msgstr "Gérer Dimension"
+msgstr "Table"
 
 msgctxt "view:table:"
 msgid "Table Definition"
@@ -985,3 +1013,11 @@ msgstr "Annuler"
 msgctxt "wizard_button:table.2d.open,ask_dimensions,open_:"
 msgid "Open"
 msgstr "Ouvert"
+
+msgctxt "wizard_button:table.dimension.value.open,ask_type,end:"
+msgid "Cancel"
+msgstr "Annuler"
+
+msgctxt "wizard_button:table.dimension.value.open,ask_type,open_:"
+msgid "Open"
+msgstr "Ouvrir"
